# multioutcome-cvae

./: README.md  pyproject.toml
.github/workflows/: tests.yml
R/: fit_cvae_example.R  fit_cvae_missing_y_gaussian.R  use_mlflow_model.R
R/multibinCvae/: DESCRIPTION  NAMESPACE
R/multibinCvae/R/: fit_cvae.R  simulate_cvae.R  tune_cvae.R
R/multioutcomeCVAE/: DESCRIPTION  NAMESPACE
R/multioutcomeCVAE/R/: fit_cvae.R  simulate_cvae.R  tune_cvae.R
docs/: model_recovery_vignette.ipynb
python/: setup.py
python/multibin_cvae/: __init__.py  model.py  simulate.py  utils_diagnostics.py
python/multibin_cvae/examples/: bernoulli_basic.py  gaussian_basic.py  gaussian_missing_y.py  poisson_basic.py  train_with_mlflow.py  use_mlflow_model.py
python/multioutcome_cvae/: __init__.py  model.py  simulate.py  utils_diagnostics.py
python/multioutcome_cvae/examples/: bernoulli_basic.py  gaussian_basic.py  gaussian_missing_y.py  poisson_basic.py  train_with_mlflow.py  use_mlflow_model.py
tests/: conftest.py  test_bayeslik.py  test_end_to_end.py  test_examples_smoke.py  test_imports.py  test_masked_y.py  test_simulate.py  test_trainer_basic.py  test_trainer_predict.py
