[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multioutcome-cvae"             # pip / distribution name
version = "0.1.0"
description = "Conditional Variational Autoencoder for multivariate outcomes (Bernoulli, Gaussian, Poisson)"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Jarrod Dalton" }
]

license = { text = "MIT" }

keywords = [
  "cvae",
  "variational-autoencoder",
  "multivariate",
  "simulation",
  "generative-models",
  "machine-learning",
  "deep-learning"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime dependencies
dependencies = [
  "numpy>=1.20",
  "torch>=2.0",
  "matplotlib>=3.3",
  "mlflow>=2.0",
  "hyperopt>=0.2",
]

# Tell setuptools where packages live
[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
